--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,10 @@
     <meta name='viewport' content='initial-scale=1, maximum-scale=1.0, user-scalable=0, viewport-fit=cover'>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Coding Pirates</title>
-    <link rel="apple-touch-icon" sizes="180x180" href=“/icons/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
-    <link rel="manifest" href=“/manifest.json”>
+    <link rel="manifest" href="/manifest.json">
     <link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#12120e">
     <link rel="shortcut icon" href="/favicons/favicon.ico">
     <meta name="msapplication-TileColor" content="#12120e">
