Putting back the Apple Touch icon

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <title>Coding Pirates</title>
     <link rel="shortcut icon" href="/favicon.ico">
     <meta name="msapplication-config" content="/icons/browserconfig.xml">
+    <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
     <!--PWA splashscreens for iOS-->
     <link href="/splashscreens/iphone5_splash.png" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
     <link href="/splashscreens/iphone6_splash.png" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
